comitting views & index

--- a/search/templates/index.html
+++ b/search/templates/index.html
@@ -1,13 +1,15 @@
-{% load staticfiles %}
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project Bubble Trouble</title>
+        <title>Break out of your bubble</title>
         <link rel="stylesheet" type="text/css" href="{% static "/main.css" %}" />
     </head>
     <body>
         <div id="header">
-            <h1>Project Bubble Trouble</h1>
+            <h1>Break out of your bubble</h1>
+                Find politically different but demographically similar counties
+            </h1>
         </div>
         <div class="frame">
             <form method="get">
