Updating data source info

--- a/bubbletrouble/search/templates/index.html
+++ b/bubbletrouble/search/templates/index.html
@@ -195,7 +195,7 @@
                 <li>% Uninsured: Percent of individuals of all ages without health insurance coverage </li>
                 <li>Racial demography: Racial makeup (% White, % Asian, etc.). Categories are defined by the Census</li>
                 <br>
-                Source: 2015 Census data
+                Sources: Census Bureau American Community Survey (2015 5-year) and Decennial Census (2010) county-level tables
             </ul>
 
         {% if args %}
