--- a/bubbletrouble/search/templates/index.html
+++ b/bubbletrouble/search/templates/index.html
@@ -4,23 +4,26 @@
 <html>
     <head>
         <title>Project Bubble Trouble</title>
-        <!-- <link rel="stylesheet" type="text/css" href="{% static "/main.css" %}" /> -->
         <style>
         html, body {
-            margin: 5px;
-            padding: 7px;
+            margin: 20px;
+            padding: 20px;
             font-family: Verdana;
+            text-align: left;
+            font-size: 25;
         }
         
         div#header h1 {
             font-size: 36px;
+            text-align: left;
             color: #8A2BE2;
             margin: 5px;
             padding: 7px;
         }
 
         div#header h2 {
-            font-size: 17px;
+            font-size: 30px;
+            text-align: left;
             margin: 5px;
             padding: 7px;
         }
@@ -52,20 +55,20 @@
         
         fieldset legend {
             font-weight: bold;
-            font-size: 14px;
+            font-size: 16px;
         }
         
         input.query {
-            font-size: 14px;
+            font-size: 16px;
         }
         
         label {
-            font-size: 14px;
+            font-size: 16px;
         }
         
         p.num_results {
             margin-left: 5px;
-            font-size: 14px;
+            font-size: 16px;
         }
         
         table.form {
@@ -75,19 +78,19 @@
         table.outputs tr td,
         table.outputs tr th {
             padding: 3px;
-            font-size: 14px;
+            font-size: 16px;
         }
         table.outputs tr:first-child td{
             font-weight: bold;
         }  
 
         table.outputs tr:nth-child(even) {
-            background:#AA98A9;
+            background:#c9b3c8;
         }
         
         table.form input {
             margin-right: 5px;
-            font-size: 12px;
+            font-size: 16px;
         }
         
         table.form ul {
@@ -106,11 +109,11 @@
             border: 1px solid #ddd;
             padding: 0px;
             margin: 0px;
-            text-align: left;
+            text-align: center;
         }
         
         span.helptext {
-            font-size: 14px;
+            font-size: 16px;
             color: gray;
         }
     </style>
