--- a/bubbletrouble/search/templates/index.html
+++ b/bubbletrouble/search/templates/index.html
@@ -151,18 +151,18 @@
         <br>
         <div id="header">
         <h2>Part 2: Find counties which are demographically similar, <br>
-            but politically different from your current county  </h2>
+            but politically different from your county of interest </h2>
             <br>
             Instructions:
         <ol>
-            <li>Select your current state and county of residence.</li>
+            <li>Select the state and county you are interested in.</li>
             <li>Enter in your tolerance for dissimilarity. <br>
                 For ex., if you enter in 5, you will only see counties that are within 5% <br>
-                of your current county for the demographics you want to match against.</li>
+                of your county of interest for the demographics you want to match against.</li>
             <li>Select the demographics you want to match against.</li>
             <li>Press submit! See which counties match your criteria. </li>
 
-            The county in which you currently reside will always be shown first. <br>
+            The county of interest will always be shown first. <br>
             The rest of the responses are sorted so the most politically different counties are at the top.<br>
         </ol>
         <br>
@@ -182,9 +182,9 @@
             <ul>
                 <li>% Naturalized Citizens: Percent of citizens who are citizens by naturalization </li>
                 <li>% with Limited English: Percent of households that have limited English proficiency </li>
-                <li>Low Ed Attain: Percent of individuals 25 or older whose highest educational attainment level is a high school degree or lower </li>
+                <li>% Low Ed Attain: Percent of individuals 25 or older whose highest educational attainment level is a high school degree or lower </li>
                 <li>% Below poverty line: Percent of households whose income for the past 12 months was below the local poverty level </li>
-                <li>Median rent: Median gross rent among renter-occupied housing units paying cash rent </li>
+                <li>Median rent ($): Median gross rent among renter-occupied housing units paying cash rent </li>
                 <li>% Uninsured: Percent of individuals of all ages without health insurance coverage </li>
                 <li>Racial demography: Racial makeup (% White, % Asian, etc.). Categories are defined by the Census</li>
                 <br>
